frontend/web/css/site.css
/* ... */
@media all and (max-width: 991px) {
    .slider .flex-caption .slide-row .item h2 {
        font-size: 20px;
    }
    .slider .flex-caption .slide-row .item h2 span {
        font-size: 16px;
    }
    .advantages .item .image {
        display: inline-block;
        padding-bottom: 20px;
    }
    .advantages .item .image-wrapper,
    .advantages .item .info {
        text-align: center;
    }
    /* TODO: Префиксы. */
    .programs .item {
        max-height: none;
        flex-wrap: wrap;
    }
    .programs .item .image,
    .programs .item .text {
        flex-basis: 100%;
    }
    .why-we .grid .item {
        flex-basis: 100%;
    }
    .why-we .grid .item-image {
        width: 100%;
        height: 720px;
    }

    .why-we .grid .item-image:first-child {
        order: 1;
    }

    .why-we .grid .item-image:last-child {
        order: 3;
    }

    .why-we .grid .item:nth-child(2) {
        order: 2;
    }

    .why-we .grid .item:nth-child(3) {
        order: 4;
    }
    .how-to .item .image::after {
        right: -35px;
        width: 50px;
        height: 15px;
        background-size: 100% auto;
    }
}

@media all and (min-width: 768px) and (max-width: 991px) {
    .header-phone {
        font-size: 18px;
    }
    .navbar-collapse {
        text-align: center;
    }
    .navbar-nav {
        display: inline-block;
        float: none !important;
    }
    .nav > li > a {
        font-size: 13px;
    }
    /* TODO: Префиксы. */
    .map {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }
    .map iframe,
    .contacts-card {
        flex-basis: 50%;
    }
    .contacts-card {
        position: relative;
        transform: none;
        width: 100%;
        top: auto;
    }
}

@media all and (max-width: 767px) {
    header {
        position: relative;
        top: auto;
        left: auto;
        right: auto;
        background-color: #1b2746;
    }
    /* TODO: Префиксы. */
    header .top-wrapper {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
    }
    .logo,
    .header-address,
    .call-order {
        text-align: center;
    }
    .logo a {
        display: inline-block;
    }
    .navbar-collapse {
        border: 0;
    }
    .slider .flex-caption {
        top: 45%;
        left: 0;
        transform: translate(0%, -50%);
    }
    /* TODO: Префиксы. */
    .slider .flex-caption .slide-row {
        flex-wrap: wrap;
    }
    .slider .flex-caption .slide-row .item,
    .slider .flex-caption .slide-row .item.item-small {
        flex-basis: 100%;
        border-right: 0;
        border-bottom: 1px solid #ffffff;
        padding: 20px;
    }
    .slider .flex-caption .slide-text {
        padding: 20px;
    }
    .slider .flex-control-nav {
        display: none;
    }
    .advantages .item-wrapper {
        text-align: center;
    }
    .advantages .item {
        display: inline-block;
        max-width: 250px;
        margin-bottom: 20px;
    }
    .get-consultation .heading,
    .get-consultation .buttons {
        text-align: center;
    }
    .calculator-row label {
        text-align: center;
        width: 100%;
    }
    .btn-primary.btn-order,
    .btn-primary.btn-order:active,
    .btn-primary.btn-order:focus,
    .btn-primary.btn-order:hover,
    .btn-primary.btn-order:active:focus,
    .btn-primary.btn-order:active:hover {
        font-size: 14px;
    }
    .btn-primary.btn-order span {
        font-size: 18px;
    }
    .why-we .grid .item-image {
        height: auto;
        min-height: 200px;
    }
    .why-we .grid .item {
        background-size: 100% auto;
    }
    /* TODO: Префиксы. */
    .how-to .how-to-grid .flex {
        flex-wrap: wrap;
    }
    .how-to .item {
        flex-basis: 100%;
        margin-bottom: 80px;
    }
    .how-to .item:last-child {
        margin-bottom: 0;
    }
    .how-to .item .image,
    .how-to .item .info {
        float: none;
        margin: 0 auto;
        max-width: 300px;
    }
    .how-to .item .info {
        position: relative;
    }
    .how-to .item .image::after {
        display: none;
    }
    .how-to .item .info::after {
        content: '';
        position: absolute;
        bottom: -75px;
        top: auto;
        left: 50%;
        transform: translateX(-50%);
        width: 35px;
        height: 95px;
        background: url(../img/main/arrow-right-rotate.png) no-repeat center center / auto;
    }

    .how-to .item:last-child .info::after {
        display: none;
    }

    .contacts-card {
        position: relative;
        transform: none;
        top: auto;
        width: 100%;
        text-align: center;
    }

    .contacts-card .text {
        max-width: 420px;
        display: inline-block;
    }

    .contacts-card img {
        float: none;
        margin: 0 auto 20px;
    }
}

@media all and (max-width: 600px) {
    .programs .programs-wrapper > * {
        width: 100%;
    }
    .programs .item .image img {
        float: none;
        margin: 0 auto;
    }
    .calculator .item-wrapper {
        width: 100%;
    }
}

@media all and (max-width: 480px) {
    header .top-wrapper > * {
        width: 100%;
    }
    .btn-primary.btn-order,
    .btn-primary.btn-order:active,
    .btn-primary.btn-order:focus,
    .btn-primary.btn-order:hover,
    .btn-primary.btn-order:active:focus,
    .btn-primary.btn-order:active:hover {
        padding: 10px 35px;
    }
}

